deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-frontend
  template:
    metadata:
      labels:
        app: vite-frontend
    spec:
      containers:
        - name: vite
          image: joakimfellbom/editoreasy-showcase:latest
          ports:
            - containerPort: 4173
