deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-frontend
spec:
  type: NodePort
  selector:
    app: vite-frontend
  ports:
    - port: 80
      targetPort: 4173
      nodePort: 30080
