deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vite-frontend.user-joakimfellbom.cloud.sp5.onyxia.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vite-frontend
                port:
                  number: 80
